<resources>
    <string name="app_name">Senior-Pay</string>
    <string name="transfer_money">送金・入金</string>
    <string name="title">シニアペイ</string>
    <string name="how_to_use">使い方</string>
    <string name="charge">チャージ</string>
    <string name="history">購入履歴</string>
    <string name="payment">残額で支払い</string>
    <string name="back">戻る</string>
    <string name="check_transfer">送金/入金確認</string>
    <string name="to_use">使い方</string>
    <string name="internet">インターネット</string>
    <string name="minus">1000円　減らす</string>
    <string name="plus">1000円　追加</string>
    <string name="account">銀行口座を登録</string>
    <string name="clear">金額を0にする</string>
    <string name="yen">円</string>
    <string name="before">チャージ前の金額:</string>
    <string name="add">チャージする金額:</string>
    <string name="after">チャージ後の金額</string>
    <string name="camera_picture">camera picture</string>
    <string name="yourapp">YourApp</string>
    <string name="get_recipe">レシートを読み取る</string>
    <string name="start_camera">カメラを起動する</string>
    <string name="read">読み込む</string>
    <string name="fund">送金する</string>
    <string name="refund">入金する</string>
    <string name="fund_check">送金する</string>
    <string name="already">登録済み</string>
    <string name="research">履歴検索</string>
    <string name="next_month">次へ</string>
    <string name="before_month">前へ</string>
    <string name="app_name2">Your App Name</string>
    <string name="hint_key">company</string>
    <string name="hint_value">US$price</string>
    <string name="insert">insert</string>
    <string name="read2">read</string>
    <string name="set_0">クリアにする</string>
    <string name="this_month">今月の会計</string>
    <string name="num_before">10000</string>//追加
    <string name="num_add">0</string>//追加
    <string name="num_after">0</string>
    <string name="maintext">チャージしたい金額を\n入力してください</string>//追加
    <string name="maintext_chargeError">お金が足りません！</string>//追加
    <string name="maintext_plusError">一回の上限は2万円までです！</string>//追加
    <string name="img_description2">image2</string>
    <string name="fund_refund">送金・入金</string>
    <string name="money">利用可能額: ---円</string>
</resources>