<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChargeActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="102dp"
        android:layout_height="53dp"
        android:layout_marginTop="56dp"
        android:drawableLeft="?attr/actionModeCloseDrawable"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/title"
        android:layout_width="409dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/charge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/charge"
        android:layout_width="188dp"
        android:layout_height="88dp"
        android:layout_marginBottom="188dp"
        android:text="@string/charge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/account"
        android:layout_width="197dp"
        android:layout_height="88dp"
        android:layout_marginBottom="68dp"
        android:text="@string/account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/plus"
        android:layout_width="185dp"
        android:layout_height="72dp"
        android:layout_marginBottom="304dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minus"
        android:layout_width="187dp"
        android:layout_height="89dp"
        android:layout_marginBottom="184dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/before"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="552dp"
        android:gravity="center"
        android:text="@string/before"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/add"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="488dp"
        android:gravity="center"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/before_yen"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:layout_marginStart="236dp"
        android:layout_marginBottom="552dp"
        android:gravity="end"
        android:text="@string/yen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/add_yen"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:layout_marginStart="236dp"
        android:layout_marginBottom="488dp"
        android:gravity="end"
        android:text="@string/yen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/after_yen"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:layout_marginStart="240dp"
        android:layout_marginBottom="420dp"
        android:gravity="end"
        android:text="@string/yen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/after"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="420dp"
        android:gravity="center"
        android:text="@string/after"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clear"
        android:layout_width="164dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="304dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>