<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment2">

    <FrameLayout
        android:id="@+id/fragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainFragment"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/back"
            android:layout_width="114dp"
            android:layout_height="68dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="?attr/actionModeCloseDrawable"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/title"
            android:layout_width="409dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/history"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/bt1"
            android:layout_width="152dp"
            android:layout_height="103dp"
            android:layout_marginTop="530dp"
            android:layout_marginStart="20dp"
            android:text="@string/before_month"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt2"
            app:layout_constraintHorizontal_bias="0.431" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="147dp"
            android:layout_height="103dp"
            android:layout_marginTop="530dp"
            android:layout_marginStart="250dp"
            android:text="@string/next_month"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>