<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestCamera">

    <Button
        android:id="@+id/camera_button"
        android:layout_width="230dp"
        android:layout_height="68dp"
        android:layout_margin="20dp"
        android:text="@string/start_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295"
        app:backgroundTint="@color/m_red"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/image_view"
        android:scaleType="fitCenter"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/camera_picture"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go"
        android:layout_width="170dp"
        android:layout_height="63dp"
        android:layout_marginTop="616dp"
        android:drawableLeft="@android:drawable/ic_media_play"
        android:text="@string/read"
        android:textSize="20sp"
        app:backgroundTint="@color/m_light_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/back"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/back"
        android:textSize="24sp"
        app:backgroundTint="@color/m_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/title"
        android:layout_width="409dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="レシート読取"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints"
        android:textSize="30sp" />

</androidx.constraintlayout.widget.ConstraintLayout>